feat: internal role controller incl. search and tests
